--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 *::-webkit-scrollbar {
@@ -13,7 +13,6 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -23,14 +22,14 @@
 
 body {
   height: 100vh;
-  // width: 100%;
   padding: 0;
   margin: 0;
   display: flex;
   place-items: center;
   background: url('/images/background.png');
   background-color: #080605;
+  background-attachment: fixed;
   background-repeat: no-repeat;
-  // background-position: top right;
   background-size: cover;
+  // overflow: hidden;
 }
